--- a/index.html
+++ b/index.html
@@ -6,93 +6,236 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
+    :root {
+      --bg: #f3f4f6;
+      --card-bg: #ffffff;
+      --primary: #2563eb;
+      --primary-soft: #dbeafe;
+      --danger: #dc2626;
+      --text-main: #111827;
+      --text-sub: #6b7280;
+      --border-soft: #e5e7eb;
+      --radius: 12px;
+    }
+
+    * {
+      box-sizing: border-box;
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+    }
+
     body {
       margin: 0;
       padding: 16px;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: #f3f4f6;
+      background: var(--bg);
+      color: var(--text-main);
     }
+
     h1 {
-      margin-top: 0;
+      margin: 0 0 4px 0;
+      font-size: 28px;
     }
+
+    p.subtitle {
+      margin: 0 0 16px 0;
+      font-size: 14px;
+      color: var(--text-sub);
+    }
+
     .layout {
       display: grid;
       grid-template-columns: 2fr 3fr;
       gap: 16px;
+      margin-bottom: 16px;
     }
+
     .card {
-      background: #ffffff;
-      border-radius: 8px;
-      padding: 12px;
-      box-shadow: 0 1px 3px rgba(0,0,0,.1);
+      background: var(--card-bg);
+      border-radius: var(--radius);
+      padding: 12px 14px;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, .08);
     }
+
+    .card h3 {
+      margin: 0 0 8px 0;
+      font-size: 16px;
+    }
+
+    .summary-badges {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 6px;
+      margin-bottom: 10px;
+    }
+
+    .badge {
+      display: inline-flex;
+      align-items: center;
+      gap: 4px;
+      padding: 3px 8px;
+      border-radius: 999px;
+      border: 1px solid var(--border-soft);
+      font-size: 11px;
+      background: #f9fafb;
+      color: var(--text-sub);
+    }
+
+    .badge strong {
+      color: var(--text-main);
+    }
+
+    .table-card {
+      margin-top: 8px;
+    }
+
+    .table-container {
+      max-height: 420px;
+      overflow: auto;
+      border-radius: var(--radius);
+      border: 1px solid var(--border-soft);
+    }
+
     table {
       width: 100%;
       border-collapse: collapse;
       font-size: 13px;
+      background: #fff;
     }
+
     th, td {
-      border-bottom: 1px solid #e5e7eb;
-      padding: 4px 6px;
+      padding: 6px 8px;
+      border-bottom: 1px solid var(--border-soft);
       text-align: left;
+      vertical-align: top;
       white-space: nowrap;
     }
+
     th {
-      background: #f9fafb;
       position: sticky;
       top: 0;
       z-index: 1;
+      background: #f9fafb;
+      font-weight: 600;
+      font-size: 12px;
     }
-    .table-container {
-      max-height: 480px;
-      overflow: auto;
+
+    tr:nth-child(even) td {
+      background: #fbfbfb;
     }
-    .badge {
-      display: inline-block;
-      padding: 2px 6px;
+
+    .pill {
+      padding: 2px 8px;
       border-radius: 999px;
       font-size: 11px;
-      border: 1px solid #e5e7eb;
-      background: #f9fafb;
+      border: 1px solid var(--border-soft);
+    }
+
+    .pill-ok {
+      background: #ecfdf5;
+      border-color: #bbf7d0;
+      color: #15803d;
+    }
+
+    .pill-pending {
+      background: #fefce8;
+      border-color: #fef3c7;
+      color: #b45309;
+    }
+
+    .pill-none {
+      background: #f3f4f6;
+      color: #6b7280;
+    }
+
+    .status-bar {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin: 4px 0 10px 0;
+      font-size: 12px;
+      color: var(--text-sub);
+    }
+
+    .status-dot {
+      width: 8px;
+      height: 8px;
+      border-radius: 999px;
+      margin-right: 4px;
+      background: #22c55e;
+      display: inline-block;
+    }
+
+    .status-dot.error {
+      background: var(--danger);
+    }
+
+    .status-text {
+      display: inline-flex;
+      align-items: center;
+      gap: 4px;
+    }
+
+    .reload-btn {
+      border: none;
+      border-radius: 999px;
+      background: #e5e7eb;
+      padding: 3px 10px;
+      font-size: 11px;
+      cursor: pointer;
+    }
+
+    .reload-btn:hover {
+      background: #d1d5db;
+    }
+
+    .error-text {
+      color: var(--danger);
+      font-size: 12px;
+    }
+
+    .chart-wrapper {
+      min-height: 260px;
+    }
+
+    @media (max-width: 900px) {
+      .layout {
+        grid-template-columns: 1fr;
+      }
     }
   </style>
 </head>
 <body>
   <h1>Dashboard Phản Hồi Chấm Công</h1>
-  <p>Cập nhật tự động từ PHẢN HỒI CHẤM CÔNG.</p>
+  <p class="subtitle">Cập nhật tự động từ PHẢN HỒI CHẤM CÔNG (data.json trên GitHub).</p>
 
-  <script>
-    // ⭐⭐ LINK JSON Onedrive đã xác nhận hoạt động ⭐⭐
-    const JSON_URL = "https://ttigroup-my.sharepoint.com/personal/hoailuan_nguyen01_ttigroup_com_vn/_layouts/15/download.aspx?SourceUrl=%2Fpersonal%2Fhoailuan%5Fnguyen01%5Fttigroup%5Fcom%5Fvn%2FDocuments%2FLuan%2FDashboard%2FChamCongDashboard%2Fdata%2Ejson";
-
-    async function loadData() {
-      try {
-        const res = await fetch(JSON_URL + "&_=" + Date.now());
-        const data = await res.json();
-
-        renderTable(data);
-        renderSummary(data);
-        renderCharts(data);
-      } catch (err) {
-        console.error("Không thể tải JSON:", err);
-      }
-    }
-  </script>
+  <div class="status-bar">
+    <div>
+      <span id="status-dot" class="status-dot"></span>
+      <span id="status-text">Đang tải dữ liệu…</span>
+    </div>
+    <div>
+      <span style="margin-right:6px;">Lần cập nhật: <span id="last-updated">–</span></span>
+      <button class="reload-btn" onclick="loadData(true)">Tải lại</button>
+    </div>
+  </div>
 
   <div class="layout">
     <div class="card">
       <h3>Tổng quan</h3>
-      <p id="summary"></p>
-      <canvas id="byDateChart"></canvas>
+      <div class="summary-badges" id="summary"></div>
+      <div class="chart-wrapper">
+        <canvas id="byDateChart"></canvas>
+      </div>
     </div>
 
     <div class="card">
       <h3>Top nhân viên gửi nhiều phản hồi</h3>
-      <canvas id="byEmployeeChart"></canvas>
+      <div class="chart-wrapper">
+        <canvas id="byEmployeeChart"></canvas>
+      </div>
     </div>
   </div>
 
-  <div class="card" style="margin-top:16px;">
+  <div class="card table-card">
     <h3>Danh sách chi tiết</h3>
     <div class="table-container">
       <table id="dataTable">
@@ -112,81 +255,213 @@
     </div>
   </div>
 
-<script>
-function renderTable(data) {
-  const tbody = document.querySelector('#dataTable tbody');
-  tbody.innerHTML = '';
+  <script>
+    let byDateChartInstance = null;
+    let byEmployeeChartInstance = null;
+    const REFRESH_MS = 60_000; // 60s
 
-  data.forEach(item => {
-    const tr = document.createElement('tr');
+    function setStatus(ok, msg) {
+      const dot = document.getElementById('status-dot');
+      const text = document.getElementById('status-text');
+      dot.classList.toggle('error', !ok);
+      text.textContent = msg;
+    }
 
-    const cols = [
-      item.Date || '',
-      item.MSNV || '',
-      item.FullName || '',
-      item.NgayDieuChinh || '',
-      item.NoiDung || '',
-      item.Email || '',
-      item.ConfirmAdmin || ''
-    ];
+    function mapRecord(raw) {
+      // CHỈNH Ở ĐÂY nếu key trong JSON khác
+      return {
+        date: raw.Date || raw.date || "",
+        msnv: raw.MSNV || raw.MSNV || "",
+        fullName: raw.FullName || raw.HoTen || "",
+        ngayDieuChinh: raw.NgayDieuChinh || raw.NgayCanDieuChinh || "",
+        noiDung: raw.NoiDung || "",
+        email: raw.Email || raw.EmailNguoiGui || "",
+        confirm: raw.ConfirmAdmin ?? raw.ConfirmTuCris ?? null
+      };
+    }
 
-    cols.forEach(text => {
-      const td = document.createElement('td');
-      td.textContent = text;
-      tr.appendChild(td);
-    });
+    async function loadData(manual = false) {
+      try {
+        setStatus(true, manual ? "Đang tải lại dữ liệu…" : "Đang cập nhật dữ liệu…");
 
-    tbody.appendChild(tr);
-  });
-}
+        const res = await fetch("data.json?v=" + Date.now());
+        if (!res.ok) throw new Error("HTTP " + res.status);
 
-function renderSummary(data) {
-  const total = data.length;
-  const uniqueMSNV = new Set(data.map(x => x.MSNV)).size;
-  const dates = new Set(data.map(x => x.Date));
+        const raw = await res.json();
+        const data = Array.isArray(raw) ? raw.map(mapRecord) : [];
 
-  document.getElementById('summary').innerHTML =
-    `<span class="badge">Tổng feedback: ${total}</span> ` +
-    `<span class="badge">MSNV khác nhau: ${uniqueMSNV}</span> ` +
-    `<span class="badge">Số ngày có feedback: ${dates.size}</span>`;
-}
+        renderSummary(data);
+        renderTable(data);
+        renderCharts(data);
 
-function groupBy(arr, keyFn) {
-  const map = {};
-  arr.forEach(item => {
-    const key = keyFn(item);
-    if (!map[key]) map[key] = 0;
-    map[key]++;
-  });
-  return map;
-}
+        const now = new Date();
+        document.getElementById("last-updated").textContent =
+          now.toLocaleString("vi-VN");
 
-function renderCharts(data) {
-  // Theo ngày
-  const byDate = groupBy(data, x => x.Date || 'N/A');
-  const dateLabels = Object.keys(byDate).sort();
-  const dateValues = dateLabels.map(k => byDate[k]);
+        setStatus(true, "Dữ liệu đã được cập nhật.");
+        console.log("Loaded records:", data.length);
+      } catch (err) {
+        console.error("Load data error:", err);
+        setStatus(false, "Lỗi khi tải dữ liệu: " + err.message);
+      }
+    }
 
-  new Chart(document.getElementById('byDateChart'), {
-    type: 'bar',
-    data: { labels: dateLabels, datasets: [{ label: 'Số feedback', data: dateValues }] },
-    options: { responsive: true, plugins: { legend: { display: false } } }
-  });
+    function renderSummary(data) {
+      const total = data.length;
+      const uniqueMSNV = new Set(data.map(x => x.msnv)).size;
+      const days = new Set(data.map(x => x.date)).size;
+      const pending = data.filter(x => !x.confirm || x.confirm === "0").length;
 
-  // Theo nhân viên
-  const byEmp = groupBy(data, x => x.FullName || 'N/A');
-  const sortedEmp = Object.entries(byEmp).sort((a,b) => b[1] - a[1]).slice(0,10);
+      const target = document.getElementById("summary");
+      target.innerHTML = "";
 
-  new Chart(document.getElementById('byEmployeeChart'), {
-    type: 'bar',
-    data: { labels: sortedEmp.map(x => x[0]), datasets: [{ label: 'Số feedback', data: sortedEmp.map(x => x[1]) }] },
-    options: { indexAxis: 'y', responsive: true, plugins: { legend: { display: false } } }
-  });
-}
+      const items = [
+        { label: "Tổng feedback", value: total },
+        { label: "MSNV khác nhau", value: uniqueMSNV },
+        { label: "Số ngày có feedback", value: days },
+        { label: "Chưa confirm", value: pending }
+      ];
 
-loadData();
-setInterval(loadData, 60000);
-</script>
+      for (const item of items) {
+        const span = document.createElement("span");
+        span.className = "badge";
+        span.innerHTML = `<span>${item.label}:</span><strong>${item.value}</strong>`;
+        target.appendChild(span);
+      }
+    }
 
+    function renderTable(data) {
+      const tbody = document.querySelector("#dataTable tbody");
+      tbody.innerHTML = "";
+
+      // sort: mới nhất ở trên cùng
+      const sorted = [...data].sort((a, b) => (b.date || "").localeCompare(a.date || ""));
+
+      sorted.forEach(row => {
+        const tr = document.createElement("tr");
+
+        const cells = [
+          row.date,
+          row.msnv,
+          row.fullName,
+          row.ngayDieuChinh,
+          row.noiDung,
+          row.email,
+          formatConfirm(row.confirm)
+        ];
+
+        cells.forEach((val, idx) => {
+          const td = document.createElement("td");
+
+          if (idx === 6) {
+            td.innerHTML = val; // đã có HTML pill
+          } else {
+            td.textContent = val || "";
+          }
+
+          tr.appendChild(td);
+        });
+
+        tbody.appendChild(tr);
+      });
+    }
+
+    function formatConfirm(confirm) {
+      let text = "Chưa phản hồi";
+      let cls = "pill pill-pending";
+
+      if (confirm === true || confirm === "1" || confirm === "OK" || confirm === "Đã xử lý") {
+        text = "Đã xử lý";
+        cls = "pill pill-ok";
+      } else if (confirm === null || confirm === undefined || confirm === "") {
+        // giữ default pending
+      } else {
+        text = String(confirm);
+        cls = "pill pill-none";
+      }
+
+      return `<span class="${cls}">${text}</span>`;
+    }
+
+    function groupBy(arr, keyFn) {
+      const map = {};
+      for (const item of arr) {
+        const key = keyFn(item) || "N/A";
+        map[key] = (map[key] || 0) + 1;
+      }
+      return map;
+    }
+
+    function renderCharts(data) {
+      const byDate = groupBy(data, r => r.date);
+      const dateLabels = Object.keys(byDate).sort();
+      const dateValues = dateLabels.map(k => byDate[k]);
+
+      const ctx1 = document.getElementById("byDateChart").getContext("2d");
+      if (byDateChartInstance) byDateChartInstance.destroy();
+      byDateChartInstance = new Chart(ctx1, {
+        type: "bar",
+        data: {
+          labels: dateLabels,
+          datasets: [{
+            label: "Số feedback mỗi ngày",
+            data: dateValues,
+            backgroundColor: "rgba(37, 99, 235, 0.7)"
+          }]
+        },
+        options: {
+          responsive: true,
+          maintainAspectRatio: false,
+          plugins: {
+            legend: { display: false }
+          },
+          scales: {
+            x: { ticks: { font: { size: 10 } } },
+            y: { beginAtZero: true, precision: 0 }
+          }
+        }
+      });
+
+      const byEmp = groupBy(data, r => r.fullName || r.msnv);
+      const top = Object.entries(byEmp)
+        .sort((a, b) => b[1] - a[1])
+        .slice(0, 10);
+
+      const empLabels = top.map(x => x[0]);
+      const empValues = top.map(x => x[1]);
+
+      const ctx2 = document.getElementById("byEmployeeChart").getContext("2d");
+      if (byEmployeeChartInstance) byEmployeeChartInstance.destroy();
+      byEmployeeChartInstance = new Chart(ctx2, {
+        type: "bar",
+        data: {
+          labels: empLabels,
+          datasets: [{
+            label: "Số feedback",
+            data: empValues,
+            backgroundColor: "rgba(37, 99, 235, 0.7)"
+          }]
+        },
+        options: {
+          indexAxis: "y",
+          responsive: true,
+          maintainAspectRatio: false,
+          plugins: {
+            legend: { display: false }
+          },
+          scales: {
+            x: { beginAtZero: true, precision: 0 },
+            y: { ticks: { font: { size: 10 } } }
+          }
+        }
+      });
+    }
+
+    // Lần đầu
+    loadData();
+
+    // Auto refresh mỗi 60 giây
+    setInterval(() => loadData(false), REFRESH_MS);
+  </script>
 </body>
 </html>
