--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 </head>
 <body>
   <h1>Dashboard Phản Hồi Chấm Công</h1>
-  <p class="subtitle">Cập nhật tự động từ PHẢN HỒI CHẤM CÔNG (data.json trên GitHub).</p>
+  <p class="subtitle">Cập nhật tự động từ PHẢN HỒI CHẤM CÔNG.</p>
 
   <div class="status-bar">
     <div>
