--- a/index.html
+++ b/index.html
@@ -1,467 +1,226 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-  <meta charset="UTF-8" />
-  <title>Dashboard Phản Hồi Chấm Công</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-  <style>
-    :root {
-      --bg: #f3f4f6;
-      --card-bg: #ffffff;
-      --primary: #2563eb;
-      --primary-soft: #dbeafe;
-      --danger: #dc2626;
-      --text-main: #111827;
-      --text-sub: #6b7280;
-      --border-soft: #e5e7eb;
-      --radius: 12px;
-    }
-
-    * {
-      box-sizing: border-box;
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-    }
-
-    body {
-      margin: 0;
-      padding: 16px;
-      background: var(--bg);
-      color: var(--text-main);
-    }
-
-    h1 {
-      margin: 0 0 4px 0;
-      font-size: 28px;
-    }
-
-    p.subtitle {
-      margin: 0 0 16px 0;
-      font-size: 14px;
-      color: var(--text-sub);
-    }
-
-    .layout {
-      display: grid;
-      grid-template-columns: 2fr 3fr;
-      gap: 16px;
-      margin-bottom: 16px;
-    }
-
-    .card {
-      background: var(--card-bg);
-      border-radius: var(--radius);
-      padding: 12px 14px;
-      box-shadow: 0 1px 3px rgba(0, 0, 0, .08);
-    }
-
-    .card h3 {
-      margin: 0 0 8px 0;
-      font-size: 16px;
-    }
-
-    .summary-badges {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 6px;
-      margin-bottom: 10px;
-    }
-
-    .badge {
-      display: inline-flex;
-      align-items: center;
-      gap: 4px;
-      padding: 3px 8px;
-      border-radius: 999px;
-      border: 1px solid var(--border-soft);
-      font-size: 11px;
-      background: #f9fafb;
-      color: var(--text-sub);
-    }
-
-    .badge strong {
-      color: var(--text-main);
-    }
-
-    .table-card {
-      margin-top: 8px;
-    }
-
-    .table-container {
-      max-height: 420px;
-      overflow: auto;
-      border-radius: var(--radius);
-      border: 1px solid var(--border-soft);
-    }
-
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      font-size: 13px;
-      background: #fff;
-    }
-
-    th, td {
-      padding: 6px 8px;
-      border-bottom: 1px solid var(--border-soft);
-      text-align: left;
-      vertical-align: top;
-      white-space: nowrap;
-    }
-
-    th {
-      position: sticky;
-      top: 0;
-      z-index: 1;
-      background: #f9fafb;
-      font-weight: 600;
-      font-size: 12px;
-    }
-
-    tr:nth-child(even) td {
-      background: #fbfbfb;
-    }
-
-    .pill {
-      padding: 2px 8px;
-      border-radius: 999px;
-      font-size: 11px;
-      border: 1px solid var(--border-soft);
-    }
-
-    .pill-ok {
-      background: #ecfdf5;
-      border-color: #bbf7d0;
-      color: #15803d;
-    }
-
-    .pill-pending {
-      background: #fefce8;
-      border-color: #fef3c7;
-      color: #b45309;
-    }
-
-    .pill-none {
-      background: #f3f4f6;
-      color: #6b7280;
-    }
-
-    .status-bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      margin: 4px 0 10px 0;
-      font-size: 12px;
-      color: var(--text-sub);
-    }
-
-    .status-dot {
-      width: 8px;
-      height: 8px;
-      border-radius: 999px;
-      margin-right: 4px;
-      background: #22c55e;
-      display: inline-block;
-    }
-
-    .status-dot.error {
-      background: var(--danger);
-    }
-
-    .status-text {
-      display: inline-flex;
-      align-items: center;
-      gap: 4px;
-    }
-
-    .reload-btn {
-      border: none;
-      border-radius: 999px;
-      background: #e5e7eb;
-      padding: 3px 10px;
-      font-size: 11px;
-      cursor: pointer;
-    }
-
-    .reload-btn:hover {
-      background: #d1d5db;
-    }
-
-    .error-text {
-      color: var(--danger);
-      font-size: 12px;
-    }
-
-    .chart-wrapper {
-      min-height: 260px;
-    }
-
-    @media (max-width: 900px) {
-      .layout {
-        grid-template-columns: 1fr;
-      }
-    }
-  </style>
+    <meta charset="UTF-8" />
+    <title>Dashboard Phản Hồi Chấm Công</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <style>
+        body { font-family: Arial; margin: 0; padding: 20px; background: #f5f5f5; }
+        h1 { margin-bottom: 5px; }
+        .card { background: white; padding: 18px; margin-top: 15px; border-radius: 10px; }
+        table { width: 100%; border-collapse: collapse; margin-top: 15px; background: white; }
+        table th, table td { border: 1px solid #ddd; padding: 8px; }
+        table th { background: #f0f0f0; }
+        .search-box { margin-top: 20px; padding: 10px; background: white; border-radius: 8px; }
+        .search-box input { padding: 8px; width: 300px; }
+        .badge { padding: 4px 10px; border-radius: 6px; font-size: 12px; }
+        .confirm-done { background: #d4fcd4; color: #0b7a0b; }
+        .confirm-none { background: #ffe2cc; color: #c44c00; }
+    </style>
 </head>
+
 <body>
-  <h1>Dashboard Phản Hồi Chấm Công</h1>
-  <p class="subtitle">Cập nhật tự động từ PHẢN HỒI CHẤM CÔNG.</p>
 
-  <div class="status-bar">
-    <div>
-      <span id="status-dot" class="status-dot"></span>
-      <span id="status-text">Đang tải dữ liệu…</span>
-    </div>
-    <div>
-      <span style="margin-right:6px;">Lần cập nhật: <span id="last-updated">–</span></span>
-      <button class="reload-btn" onclick="loadData(true)">Tải lại</button>
-    </div>
-  </div>
+<h1>Dashboard Phản Hồi Chấm Công</h1>
+<p>Dữ liệu tự động cập nhật PHẢN HỒI CHẤM CÔNG.</p>
 
-  <div class="layout">
-    <div class="card">
-      <h3>Tổng quan</h3>
-      <div class="summary-badges" id="summary"></div>
-      <div class="chart-wrapper">
-        <canvas id="byDateChart"></canvas>
-      </div>
-    </div>
+<div class="search-box">
+    🔍 <b>Tìm kiếm</b> (MSNV / Họ tên):
+    <input id="searchInput" type="text" placeholder="Nhập MSNV hoặc tên..." />
+</div>
 
-    <div class="card">
-      <h3>Top nhân viên gửi nhiều phản hồi</h3>
-      <div class="chart-wrapper">
-        <canvas id="byEmployeeChart"></canvas>
-      </div>
-    </div>
-  </div>
+<div class="card">
+    <h2>Tổng quan</h2>
+    <canvas id="chartSummary"></canvas>
+</div>
 
-  <div class="card table-card">
-    <h3>Danh sách chi tiết</h3>
-    <div class="table-container">
-      <table id="dataTable">
+<div class="card">
+    <h2>Top nhân viên gửi nhiều phản hồi</h2>
+    <canvas id="chartTop"></canvas>
+</div>
+
+<div class="card">
+    <h2>Thống kê theo BU</h2>
+    <canvas id="chartBU"></canvas>
+</div>
+
+<div class="card">
+    <h2>Thống kê theo Team</h2>
+    <canvas id="chartTeam"></canvas>
+</div>
+
+<div class="card">
+    <h2>Danh sách chi tiết</h2>
+    <table id="dataTable">
         <thead>
-          <tr>
-            <th>Date</th>
-            <th>MSNV</th>
-            <th>Họ tên</th>
-            <th>Ngày cần điều chỉnh</th>
-            <th>Nội dung</th>
-            <th>Email người gửi</th>
-            <th>Confirm Admin</th>
-          </tr>
+            <tr>
+                <th>Date</th>
+                <th>MSNV</th>
+                <th>Họ tên</th>
+                <th>Ngày cần điều chỉnh</th>
+                <th>Nội dung</th>
+                <th>Email</th>
+                <th>Confirm Admin</th>
+                <th>BU</th>
+                <th>Team</th>
+            </tr>
         </thead>
         <tbody></tbody>
-      </table>
-    </div>
-  </div>
+    </table>
+</div>
 
-  <script>
-    let byDateChartInstance = null;
-    let byEmployeeChartInstance = null;
-    const REFRESH_MS = 60_000; // 60s
+<script>
+const JSON_URL = "data.json";
 
-    function setStatus(ok, msg) {
-      const dot = document.getElementById('status-dot');
-      const text = document.getElementById('status-text');
-      dot.classList.toggle('error', !ok);
-      text.textContent = msg;
+/* =====================
+   LOAD JSON
+===================== */
+async function loadData() {
+    try {
+        const res = await fetch(JSON_URL + "?cache=" + Date.now());
+        return await res.json();
+    } catch (e) {
+        console.error("Lỗi load JSON:", e);
+        return [];
     }
+}
 
-    function mapRecord(raw) {
-      // CHỈNH Ở ĐÂY nếu key trong JSON khác
-      return {
-        date: raw.Date || raw.date || "",
-        msnv: raw.MSNV || raw.MSNV || "",
-        fullName: raw.FullName || raw.HoTen || "",
-        ngayDieuChinh: raw.NgayDieuChinh || raw.NgayCanDieuChinh || "",
-        noiDung: raw.NoiDung || "",
-        email: raw.Email || raw.EmailNguoiGui || "",
-        confirm: raw.ConfirmAdmin ?? raw.ConfirmTuCris ?? null
-      };
-    }
+/* =====================
+   RENDER TABLE
+===================== */
+function renderTable(data) {
+    const tbody = document.querySelector("#dataTable tbody");
+    tbody.innerHTML = "";
 
-    async function loadData(manual = false) {
-      try {
-        setStatus(true, manual ? "Đang tải lại dữ liệu…" : "Đang cập nhật dữ liệu…");
+    data.forEach(row => {
+        tbody.innerHTML += `
+            <tr>
+                <td>${row.Date || ""}</td>
+                <td>${row.MSNV || ""}</td>
+                <td>${row.FullName || ""}</td>
+                <td>${row.NgayDieuChinh || ""}</td>
+                <td>${row.NoiDung || ""}</td>
+                <td>${row.Email || ""}</td>
+                <td>
+                    <span class="badge ${row.ConfirmAdmin ? "confirm-done" : "confirm-none"}">
+                        ${row.ConfirmAdmin ? row.ConfirmAdmin : "Chưa phản hồi"}
+                    </span>
+                </td>
+                <td>${row.BU || ""}</td>
+                <td>${row.Team || ""}</td>
+            </tr>
+        `;
+    });
+}
 
-        const res = await fetch("data.json?v=" + Date.now());
-        if (!res.ok) throw new Error("HTTP " + res.status);
+/* =====================
+   DASHBOARD SUMMARY
+===================== */
+function renderSummaryChart(data) {
+    const grouped = {};
 
-        const raw = await res.json();
-        const data = Array.isArray(raw) ? raw.map(mapRecord) : [];
+    data.forEach(r => {
+        if (!grouped[r.Date]) grouped[r.Date] = 0;
+        grouped[r.Date]++;
+    });
 
-        renderSummary(data);
-        renderTable(data);
-        renderCharts(data);
-
-        const now = new Date();
-        document.getElementById("last-updated").textContent =
-          now.toLocaleString("vi-VN");
-
-        setStatus(true, "Dữ liệu đã được cập nhật.");
-        console.log("Loaded records:", data.length);
-      } catch (err) {
-        console.error("Load data error:", err);
-        setStatus(false, "Lỗi khi tải dữ liệu: " + err.message);
-      }
-    }
-
-    function renderSummary(data) {
-      const total = data.length;
-      const uniqueMSNV = new Set(data.map(x => x.msnv)).size;
-      const days = new Set(data.map(x => x.date)).size;
-      const pending = data.filter(x => !x.confirm || x.confirm === "0").length;
-
-      const target = document.getElementById("summary");
-      target.innerHTML = "";
-
-      const items = [
-        { label: "Tổng feedback", value: total },
-        { label: "MSNV khác nhau", value: uniqueMSNV },
-        { label: "Số ngày có feedback", value: days },
-        { label: "Chưa confirm", value: pending }
-      ];
-
-      for (const item of items) {
-        const span = document.createElement("span");
-        span.className = "badge";
-        span.innerHTML = `<span>${item.label}:</span><strong>${item.value}</strong>`;
-        target.appendChild(span);
-      }
-    }
-
-    function renderTable(data) {
-      const tbody = document.querySelector("#dataTable tbody");
-      tbody.innerHTML = "";
-
-      // sort: mới nhất ở trên cùng
-      const sorted = [...data].sort((a, b) => (b.date || "").localeCompare(a.date || ""));
-
-      sorted.forEach(row => {
-        const tr = document.createElement("tr");
-
-        const cells = [
-          row.date,
-          row.msnv,
-          row.fullName,
-          row.ngayDieuChinh,
-          row.noiDung,
-          row.email,
-          formatConfirm(row.confirm)
-        ];
-
-        cells.forEach((val, idx) => {
-          const td = document.createElement("td");
-
-          if (idx === 6) {
-            td.innerHTML = val; // đã có HTML pill
-          } else {
-            td.textContent = val || "";
-          }
-
-          tr.appendChild(td);
-        });
-
-        tbody.appendChild(tr);
-      });
-    }
-
-    function formatConfirm(confirm) {
-      let text = "Chưa phản hồi";
-      let cls = "pill pill-pending";
-
-      if (confirm === true || confirm === "1" || confirm === "OK" || confirm === "Đã xử lý") {
-        text = "Đã xử lý";
-        cls = "pill pill-ok";
-      } else if (confirm === null || confirm === undefined || confirm === "") {
-        // giữ default pending
-      } else {
-        text = String(confirm);
-        cls = "pill pill-none";
-      }
-
-      return `<span class="${cls}">${text}</span>`;
-    }
-
-    function groupBy(arr, keyFn) {
-      const map = {};
-      for (const item of arr) {
-        const key = keyFn(item) || "N/A";
-        map[key] = (map[key] || 0) + 1;
-      }
-      return map;
-    }
-
-    function renderCharts(data) {
-      const byDate = groupBy(data, r => r.date);
-      const dateLabels = Object.keys(byDate).sort();
-      const dateValues = dateLabels.map(k => byDate[k]);
-
-      const ctx1 = document.getElementById("byDateChart").getContext("2d");
-      if (byDateChartInstance) byDateChartInstance.destroy();
-      byDateChartInstance = new Chart(ctx1, {
+    new Chart(document.getElementById("chartSummary"), {
         type: "bar",
         data: {
-          labels: dateLabels,
-          datasets: [{
-            label: "Số feedback mỗi ngày",
-            data: dateValues,
-            backgroundColor: "rgba(37, 99, 235, 0.7)"
-          }]
-        },
-        options: {
-          responsive: true,
-          maintainAspectRatio: false,
-          plugins: {
-            legend: { display: false }
-          },
-          scales: {
-            x: { ticks: { font: { size: 10 } } },
-            y: { beginAtZero: true, precision: 0 }
-          }
+            labels: Object.keys(grouped),
+            datasets: [{
+                label: "Số feedback",
+                data: Object.values(grouped),
+                backgroundColor: "#4e73df"
+            }]
         }
-      });
+    });
+}
 
-      const byEmp = groupBy(data, r => r.fullName || r.msnv);
-      const top = Object.entries(byEmp)
-        .sort((a, b) => b[1] - a[1])
-        .slice(0, 10);
+/* =====================
+   TOP EMPLOYEES
+===================== */
+function renderTopChart(data) {
+    const count = {};
 
-      const empLabels = top.map(x => x[0]);
-      const empValues = top.map(x => x[1]);
+    data.forEach(r => {
+        if (!count[r.FullName]) count[r.FullName] = 0;
+        count[r.FullName]++;
+    });
 
-      const ctx2 = document.getElementById("byEmployeeChart").getContext("2d");
-      if (byEmployeeChartInstance) byEmployeeChartInstance.destroy();
-      byEmployeeChartInstance = new Chart(ctx2, {
+    const sorted = Object.entries(count).sort((a,b)=>b[1]-a[1]).slice(0,10);
+
+    new Chart(document.getElementById("chartTop"), {
         type: "bar",
         data: {
-          labels: empLabels,
-          datasets: [{
-            label: "Số feedback",
-            data: empValues,
-            backgroundColor: "rgba(37, 99, 235, 0.7)"
-          }]
-        },
-        options: {
-          indexAxis: "y",
-          responsive: true,
-          maintainAspectRatio: false,
-          plugins: {
-            legend: { display: false }
-          },
-          scales: {
-            x: { beginAtZero: true, precision: 0 },
-            y: { ticks: { font: { size: 10 } } }
-          }
+            labels: sorted.map(x=>x[0]),
+            datasets: [{ data: sorted.map(x=>x[1]), backgroundColor: "#1cc88a" }]
         }
-      });
-    }
+    });
+}
 
-    // Lần đầu
-    loadData();
+/* =====================
+   BU + TEAM Chart
+===================== */
+function countField(data, field) {
+    const map = {};
+    data.forEach(r => {
+        if (!map[r[field]]) map[r[field]] = 0;
+        map[r[field]]++;
+    });
+    return map;
+}
 
-    // Auto refresh mỗi 60 giây
-    setInterval(() => loadData(false), REFRESH_MS);
-  </script>
+function renderBUChart(data) {
+    const grouped = countField(data, "BU");
+    new Chart(document.getElementById("chartBU"), {
+        type: "bar",
+        data: {
+            labels: Object.keys(grouped),
+            datasets: [{ data: Object.values(grouped), backgroundColor: "#ff6384" }]
+        }
+    });
+}
+
+function renderTeamChart(data) {
+    const grouped = countField(data, "Team");
+    new Chart(document.getElementById("chartTeam"), {
+        type: "bar",
+        data: {
+            labels: Object.keys(grouped),
+            datasets: [{ data: Object.values(grouped), backgroundColor: "#36a2eb" }]
+        }
+    });
+}
+
+/* =====================
+   SEARCH
+===================== */
+function setupSearch(allData) {
+    const box = document.getElementById("searchInput");
+    box.addEventListener("keyup", () => {
+        const text = box.value.toLowerCase();
+        const filtered = allData.filter(r =>
+            (r.FullName || "").toLowerCase().includes(text) ||
+            (r.MSNV || "").toLowerCase().includes(text)
+        );
+        renderTable(filtered);
+    });
+}
+
+/* =====================
+   INIT
+===================== */
+loadData().then(data => {
+    renderTable(data);
+    renderSummaryChart(data);
+    renderTopChart(data);
+    renderBUChart(data);
+    renderTeamChart(data);
+    setupSearch(data);
+});
+</script>
+
 </body>
 </html>
